# ODINAIMESH

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitignore  BRIDGE_PRO_SHIPPED.md  CARRIER_INTEGRATION_PLAN.md  CHANGELOG.md  COMPREHENSIVE_README.md  CONTRIBUTING.md  DEPLOYMENT_READINESS.md  Dockerfile  Dockerfile.agent-beta  Dockerfile.cli  Dockerfile.research  LICENSE  PRODUCTION_READY_SUMMARY.md  README.md  ROADMAP.md  ROAMING_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SFT_ADVANCED_FEATURES_SUMMARY.md  SFT_QUICK_WINS_SUMMARY.md  STRATEGIC_BETS_IMPLEMENTATION.md  STRATEGIC_DEPLOYMENT_DECISION.md  WORKDONE.md  cloudbuild.agent-beta.alt.yaml  cloudbuild.agent-beta.yaml  cloudbuild.agent_beta.yaml  cloudbuild.relay.yaml  cloudbuild.yaml  docker-compose.research.yml  lifecycle.json  pyproject.toml  requirements.txt
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: contribution_thanks.md
.github/workflows/: ci-cd.yml  deploy-cloudrun.yaml  deploy.yml  release.yml  wif-auth-check.yml
apps/: verifier_cli.py
apps/agent_beta/: Dockerfile  __init__.py  __main__.py  api.py  metrics.py  security.py
apps/cli/: odin_verify.py
apps/gateway/: admin.py  admin_reload_router.py  admin_vai.py  api.py  billing.py  bridge.py  discovery.py  dynamic_runtime.py  envelope.py  federation.py  ledger.py  metrics.py  negotiation.py  pack_loader.py  payments.py  receipts.py  (+14 more)
billing/: routes.py  stripe_bootstrap.py  usage.py  webhooks.py
config/: cloudrun.env.yaml  gcs.cors.json  hel.policy.example.json  hel_policy.json  production.env  prometheus.yml  run.env  run.yaml
deploy/: README.md  setup-gcp.sh  startup.sh
docs/: 0_9_0_BETA_CONFIG.md  0_9_0_BETA_IMPLEMENTATION.md  AI_INTRANET_READINESS.md  BRIDGES.md  BRIDGE_PRO_REVENUE_SUMMARY.md  HIGH_LEVERAGE_INTEGRATIONS.md  REALMS.md  REPO_INVENTORY.md  ROAMING_INTEGRATION.md  STATUS_README.appendix.txt  STATUS_README.md  getting-started.md  index.md  package-lock.json  package.json  pricing.md  research.md  security.md
gateway/: constants.py  research_integration.py
libs/odin_core/: pyproject.toml
libs/odin_core/odin/: __init__.py  agent_registry.py  bridge_engine.py  cache.py  cid.py  client.py  connection_pool.py  constants.py  core_v0_1.json  discovery.py  dlp.py  dynamic_reload.py  envelope.py  federation.py  hel.py  hel_policy.py  hop_index.py  http_sig.py  http_signing.py  jsonutil.py  jwks.py  ledger.py  metering.py  middleware.py  migration_manager.py  ope.py  payments_bridge_pro.py  proof.py  redaction.py  registry.py  registry_store.py  research.py  roaming.py  router_id.py  rtn.py  sbom.py  sdk.py  security.py  sft.py  sft_advanced.py  (+15 more)
libs/odin_core/odin/crypto/: blake3_hash.py
libs/odin_core/odin/oml/: __init__.py  encoder.py  symbols.py
libs/odin_core/odin/security/: __init__.py  keystore.py
libs/odin_core/odin/storage/: __init__.py  firestore.py  memory.py
libs/odin_core/odin/validators/: __init__.py  iso20022.py
libs/odin_core/odin_core/: __init__.py
libs/odin_core/odin_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
libs/odin_core/tests/: test_client.py  test_discovery_client.py  test_envelope.py  test_firestore_ledger.py  test_http_sig.py  test_http_signing.py  test_jsonutil.py  test_jwks_rotation.py  test_oml_encoder.py  test_ope.py  test_ope_integration.py  test_redaction.py  test_sdk_integration.py  test_transform.py  test_translate.py  test_verifier.py  test_verifier_envelope.py  test_verify_cli.py
marketplace/: CLOUDRUN.md  CLOUD_ARMOR.md  MARKETPLACE.md  README.md  RUNBOOK.md  SECURITY.md  SLA.md  SUBMISSION_CHECKLIST.md
odin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build-deploy-agent-beta.ps1  build-push-gateway.ps1  build-push.ps1  check_gcp_imports.py  debug_bridge.py  demo-agents-roundtrip.ps1  demo_agents_roundtrip.py  demo_bridge_pro.py  demo_sft_advanced_features.py  demo_sft_quick_wins.py  deploy-cloudrun-secure.ps1  deploy-cloudrun.ps1  deploy-gateway.ps1  deploy.ps1  deploy.sh  deploy_research_engine.py  enforcement-demo.ps1  health-check.ps1  init_db.sql  marketplace-validate.ps1  monitoring-setup.ps1  odin-health.ps1  odin-inventory.ps1  poll-release.ps1  registry-demo.ps1  run-tests.ps1  run-vitest.ps1  run.ps1  secrets-bootstrap.ps1  test_comprehensive.py  test_integration.py  test_research_engine.py  validate_deployment.py  wif-repair.ps1
sdks/python/: README.md  pyproject.toml
sdks/python/odin_protocol_sdk/: __init__.py  cid.py  client.py  verify.py
tests/: gateway_smoke_test.py  relay_smoke_test.py  test_0_9_0_beta_features.py  test_billing.py  test_bridge_pro.py  test_bridge_pro_simple.py  test_dynamic_reload_local.py  test_high_leverage_integrations.py  test_research_engine.py  test_roaming.py  test_sft_advanced_features.py  test_sft_quick_wins.py  test_sft_quick_wins_integration.py  validate_roaming.py
(+132 files in other folders)
