[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-protocol-sdk"
version = "0.0.1a0"
description = "Preview SDK for ODIN Protocol — API may change prior to 1.0. Use for evaluation only. Includes CID compute, JWKS verify, and HTTP client wrappers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "ODIN Protocol" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "httpx>=0.23,<1.0",
  "pydantic>=1.10,<3",
  "cryptography>=41",
  "pyjwt>=2",
  "blake3>=0.3",
]

[project.urls]
Homepage = "https://github.com/Maverick0351a/ODINAIMESH"

[tool.setuptools]
packages = ["odin_protocol_sdk"]
include-package-data = true
